# vk-oauth

./: .dockerignore  .env.dev_example  .env.prod_example  .env_db_example  .env_example  .gitignore  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
nginx/nginx_dev/: Dockerfile  nginx.conf
nginx/nginx_dev/nginx.d/: service.conf
nginx/nginx_prod/: Dockerfile  nginx.conf
vk_oauth/: Dockerfile  entrypoint.sh  requirements.txt
vk_oauth/app/: api_vk.py  urls.py  views.py
vk_oauth/app/templates/: base.html  index.html  logged_out.html  login.html  vk_friends.html
vk_oauth/vk_oauth/: asgi.py  settings.py  urls.py  wsgi.py
